--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Phoenix_13 - Homepage</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     
     <body>
@@ -18,7 +17,12 @@
 
 
 
-
+<style>
+    html{
+        background-color: #575757;
+    }
+    
+</style>
 
 
 </html>
