--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                 <p class="ProjectTitle">Github Page</p>
                 <p class="ProjectText">I'm currently working on a new Github Page (this one). I'll use it to show my (public) projects and add Links and badges to it. Like for Example<br> the build passing badges from C# workflows, and version badges. It's not going to be very good, because i have no experience in HTML, but i will do my best!<br>This is my #1 Priority Project, because its the only public project I have!</p>
                 <p class="ProjectLink" style="color: darkgray;">Project Repository: <a style="outline: none; color: teal;" href="https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io">https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io<a></p>
+                <img float="left" align="left" alt="GitHub contributors" src="https://img.shields.io/github/contributors/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io?color=brightgreen&logo=Github&style=for-the-badge">
+                <img float="left" align="left" style="padding-left: 10px;" alt="GitHub last commit" src="https://img.shields.io/github/last-commit/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io?color=brightgreen&logo=Github&style=for-the-badge">
+
             </div>
         </div>
         
