--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             font-size: 35px;
             font-weight: 400;
             text-align: center;
-            color: white;
+            color: teal;
+            text-shadow: lightseagreen 1px 0 10px;
         }
         .TopButtons {
             margin: 0px auto;
@@ -70,10 +71,15 @@
 
             cursor: pointer;
         }
+        .TopButton:hover {
+            color: teal;
+            text-shadow: lightseagreen 1px 0 10px;
+        }
         .SmallTitle {
             font-weight: 400;
             font-size: 35px;
-            color: white;
+            color: teal;
+            text-shadow: lightseagreen 1px 0 10px;
 
             text-align: center;
             padding-top: 150px;
