Completly remade page with vue

--- a/index.html
+++ b/index.html
@@ -1,129 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Phoenix test page</title>
-    </head>
-    <body>
-        <!--Title-->
-        <div style="margin: 0px auto; display: table; text-align: center;">
-            <p class="Title">Homepage</p>
-        </div>
-        <!--Buttons-->
-        <div class="TopButtons">
-            <button class="TopButton" type="button" onclick="document.getElementById('Projects').scrollIntoView(true); ">Projects</button>
-            <button class="TopButton" type="button" onclick="document.getElementById('Links').scrollIntoView(true); ">Links</button>
-        </div>
-
-        <p class="SmallTitle" id="Projects">Projects</p>
-        <div class="Projects">
-            <div class="ProjectPage" id="ProjectPage">
-                <p class="ProjectTitle">Github Page</p>
-                <p class="ProjectText">I'm currently working on a new Github Page (this one). I'll use it to show my (public) projects and add Links and badges to it. Like for Example<br> the build passing badges from C# workflows, and version badges. It's not going to be very good, because i have no experience in HTML, but i will do my best!<br>This is my #1 Priority Project, because its the only public project I have!</p>
-                <p class="ProjectLink" style="color: darkgray;">Project Repository: <a style="outline: none; color: teal;" href="https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io">https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io<a></p>
-                <img float="left" align="left" alt="GitHub contributors" src="https://img.shields.io/github/contributors/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io?color=brightgreen&logo=Github&style=for-the-badge">
-                <img float="left" align="left" style="padding-left: 10px;" alt="GitHub last commit" src="https://img.shields.io/github/last-commit/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io?color=brightgreen&logo=Github&style=for-the-badge">
-
-            </div>
-        </div>
-        
-        <p class="SmallTitle" id="Links">Links</p>
-        <div class="Links">
-            <p class="LinkTitle">Github Profile</p>
-            <a class="Link" href="https://github.com/PhoenixGames-Phoenix" style="color: teal;">https://github.com/PhoenixGames-Phoenix</a>
-            <p class="LinkTitle">This Page's Repository</p>
-            <a class="Link" href="https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io" style="color: teal;">https://github.com/PhoenixGames-Phoenix/PhoenixGames-Phoenix.github.io</a>
-        </div>
-
-    </body>
-    <style>
-        html {
-            font-family: Helvetica;
-        }
-        body {
-            background-color: rgb(24, 25, 28);
-        }
-        .Title {
-            font-size: 35px;
-            font-weight: 400;
-            text-align: center;
-            color: teal;
-            text-shadow: lightseagreen 1px 0 10px;
-        }
-        .TopButtons {
-            margin: 0px auto;
-            display: table;
-            text-align: center;
-            padding-left: 16px;
-        }
-        .TopButton {
-            width: 100px;
-            height: 50px;
-
-            text-align: center;
-
-            font-size: 25px;
-            font-weight: 400;
-
-            background-color: rgb(24, 25, 28);
-            border: none;
-            outline: none;
-            color: white;
-
-            cursor: pointer;
-        }
-        .TopButton:hover {
-            color: teal;
-            text-shadow: lightseagreen 1px 0 10px;
-        }
-        .SmallTitle {
-            font-weight: 400;
-            font-size: 35px;
-            color: teal;
-            text-shadow: lightseagreen 1px 0 10px;
-
-            text-align: center;
-            padding-top: 150px;
-        }
-        .Projects {
-            margin: 0px auto;
-            display: table;
-            text-align: center;
-        }
-        .ProjectTitle {
-            font-weight: 400;
-            font-size: 25px;
-            text-align: left;
-
-            color: white;
-        }
-        .ProjectText {
-            font-weight: 400;
-            font-size: 18px;
-            text-align: left;
-
-            color: lightgray;
-        }
-        .ProjectLink {
-            font-weight: 100;
-            font-size: 15px;
-            text-align: left;
-        }
-        .Links {
-            margin: 0px auto;
-            display: table;
-            text-align: center;
-        }
-        .LinkTitle {
-            font-weight: 400;
-            font-size: 25px;
-            text-align: center;
-
-            color: white;
-        }
-        .Link {
-            font-weight: 400;
-            font-size: 20px;
-            text-align: center;
-        }
-    </style>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>github-page</title><link href=/css/chunk-26c07fa8.b6192952.css rel=prefetch><link href=/js/chunk-26c07fa8.3e3fe4b8.js rel=prefetch><link href=/js/chunk-2d20f3e6.00a8ca1d.js rel=prefetch><link href=/css/app.5c56a0c6.css rel=preload as=style><link href=/js/app.4dd997fa.js rel=preload as=script><link href=/js/chunk-vendors.6e6d49d5.js rel=preload as=script><link href=/css/app.5c56a0c6.css rel=stylesheet></head><body><noscript><strong>We're sorry but github-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.6e6d49d5.js></script><script src=/js/app.4dd997fa.js></script></body></html>
